--- a/XLib/XLib.vcxproj.filters
+++ b/XLib/XLib.vcxproj.filters
@@ -55,6 +55,7 @@
     <ClInclude Include="Source\XLib.Platform.D3D11.Helpers.h" />
     <ClInclude Include="Source\XLib.Platform.D3D12.Helpers.h" />
     <ClInclude Include="Source\XLib.Platform.DXGI.Helpers.h" />
+    <ClInclude Include="Source\XLib.Containers.AVLTreeLogic.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\XLib.Random.cpp" />
