--- a/XEngine.Render.HAL.Common/XEngine.Render.HAL.Common.vcxproj
+++ b/XEngine.Render.HAL.Common/XEngine.Render.HAL.Common.vcxproj
@@ -164,7 +164,9 @@
   <ItemGroup>
     <ClInclude Include="XEngine.Render.HAL.Common.h" />
     <ClInclude Include="XEngine.Render.HAL.ObjectFormat.h" />
-    <ClInclude Include="XEngine.Render.HAL.TextureFormat.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="XEngine.Render.HAL.Common.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
