--- a/XEngine.Render/XEngine.Render.vcxproj
+++ b/XEngine.Render/XEngine.Render.vcxproj
@@ -240,6 +240,12 @@
     <ProjectReference Include="..\XEngine.Base\XEngine.Base.vcxproj">
       <Project>{276891e4-c661-4502-b581-781efb8098d6}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\XEngine.Render.HAL.Common\XEngine.Render.HAL.Common.vcxproj">
+      <Project>{102d6f8c-faad-4fd3-9b3a-16923042465e}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\XEngine.Render.HAL.D3D12\XEngine.Render.HAL.D3D12.vcxproj">
+      <Project>{1ed495b0-b69b-4409-83fc-587f590eab29}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\XLib\XLib.vcxproj">
       <Project>{df81a513-72e3-4b74-b866-97f3bb61d45f}</Project>
     </ProjectReference>
