--- a/XLib/XLib.vcxproj
+++ b/XLib/XLib.vcxproj
@@ -22,7 +22,7 @@
     <ClInclude Include="Source\XLib.AllocatorAdapterBase.h" />
     <ClInclude Include="Source\XLib.ByteStream.h" />
     <ClInclude Include="Source\XLib.Color.h" />
-    <ClInclude Include="Source\XLib.Containers.BitSet.h" />
+    <ClInclude Include="Source\XLib.Containers.BitArray.h" />
     <ClInclude Include="Source\XLib.Containers.FlatHashMap.h" />
     <ClInclude Include="Source\XLib.Containers.IntrusiveDoublyLinkedList.h" />
     <ClInclude Include="Source\XLib.Text.h" />
