--- a/XLib/XLib.vcxproj.filters
+++ b/XLib/XLib.vcxproj.filters
@@ -76,5 +76,6 @@
     <ClCompile Include="Source\XLib.System.Network.Socket.cpp" />
     <ClCompile Include="Source\XLib.Platform.COMPtr.cpp" />
     <ClCompile Include="Source\XLib.Text.cpp" />
+    <ClCompile Include="Source\XLib.Path.cpp" />
   </ItemGroup>
 </Project>
